# Achat

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject-deploy.toml  pyproject.toml  requirements-deploy.txt  requirements-dev.txt  requirements.txt  run.bat
.github/workflows/: cd.yml  ci.yml
agent/: core.py  memory.py  persona.py  router.py  state.py
api/: server.py
chroma_dev/: chroma.sqlite3
conversation/: main.py  narration_hardcoded.py  narration_monitor.py  narrator.py  session_manager.py
conversation/character/: CH_Haru.yaml  CH_Invalid ID.yaml  CH_MookHyeon.yaml  CH_Seonjae.yaml  CH_default.yaml  CH_haru.yaml  CH_schema.json  character_schema.yaml  chracter_Haru.yaml
conversation/core/: llm_client.py  prompt_build.py  router.py  session.py
conversation/loader/: character_load.py  memory_load.py  world_load.py
conversation/memory_act/: M_default.json  M_instance.json  M_schema.json
conversation/utils/: __init__.py  file_io.py  logger.py
conversation/world/: W_schema.json  W_sea.yaml
data/lora/conversation/: haru_action_input.jsonl  haru_stranger.jsonl
data/lora/dpo/: haru_corrections.jsonl
data/lora/function/: folder_organize.jsonl  prompt_convert.jsonl  search.jsonl
data/sessions/: active.json
data/sessions/Haru/: sessions.json
deploy/: achat.spec  achat_setup.iss  build_installer.bat  launcher.py
docs/: 3.md  BUG_1.md  DIR.md  HANDOVER.md  MVP대화.md  README.md  VDB.md  introduce.md  구현현황.md  대화품질.md  로드맵.md  포폴.md  학습후보.md
docs/BUG/: BUG_02.md  BUG_03.md  BUG_04.md  BUG_05.md  BUG_06.md  BUG_1-clear.md  BUG_1.md  BUG_function.md  BUG_small-clear.md  BUG_small.md
docs/plan/: DB_renew.md  UI_테스트.md  UI설계-clear.md  UI설계.md  deploy_checklist.md  narration_개선.md  phases.md  prevent_OOM.md  training_개선.md  개선2.md  개선3.md  개선4.md  개선5.md  개선6.md  개선7.md  개선8.md  기능개선.md  대화개선.md  학습데이터_개선.md
docs/참조/: Architeture.md  DIR.md  ERD.md  Serviceflow.md  data_gen_prompt.md  대화품질.md  커스터마이징.md  학습후보.md
eval/: ai_tell_checker.py  memory_test.py  speed_bench.py  verify_phases.py
memory/: embedding.py  long_term.py  short_term.py  summarizer.py
narration/: world_trigger.py
rag/: al.txt  index.py  retrieve.py  world_nav.py
rag/sources/world/: Seaside.md  culture.md  place.md  story.md
scripts/: build_dataset.py  convert_to_gguf.sh  merge_lora.py  monitor.ps1  package_deploy.sh  seed_prompt_guides.py  sync_to_windows.sh
tests/: test_bridge_slots.py  test_dialogue_quality.py  test_function_tools.py  test_improvement4.py  test_improvement5.py  test_integration_flows.py  test_integration_improvement5.py  test_narration.py  test_session_flow.py  test_state_mood.py  test_trigger_events.py  test_ui_structure.py
tools/: __init__.py  base.py  extract_memories.py  prompt_converter.py  prompt_store.py
tools/folder/: classifier.py  converter.py  cropper.py  renamer.py
tools/search/: local_search.py  web_search.py
training/: dataset.py  ewc.py  lora_train.py  train_monitor.py  학습.md
training/data/_excluded/: bright.jsonl  formal_blunt.jsonl  (+1 more)
training/eval/: ai_tell_checker.py  chat_cli.py  klue_regression.py  memory_test.py  scenario_eval.py  speed_bench.py  verify_phases.py
training/log/: _schema.json  conversation_logger.py  monitor.py  review.py
training/scripts/: build_sft_from_feedback.py  rewrite_system_prompts.py
ui_ux/: bridge.py  chat_panel.py  tray.py  widget.py
ui_ux/assets/: preferences.json
ui_ux/qml/: AdminPanel.qml  CharacterBuildPanel.qml  CharacterCreatePanel.qml  CharacterDisplay.qml  CharacterSelectPanel.qml  CharacterStatusPanel.qml  ChatBubble.qml  CustomizationPanel.qml  EmotionPanel.qml  FileOptionsPanel.qml  FileSearchPanel.qml  FolderClassifyPanel.qml  ImageCropPanel.qml  ManualPanel.qml  MemoryDBPanel.qml  PipWindow.qml  ResetConfirmPanel.qml  SettingsPanel.qml  SideMenuPanel.qml  Style.qml  WorldCreatePanel.qml  WorldImagePanel.qml  main.qml  qmldir
(+90 files in other folders)
