# ── 시스템 패키지 의존성 (apt) ──────────────────────────────────────────────
# Ubuntu 24.04 기준. Dockerfile에도 동일하게 명시됨.
#
# 한글 입력기 (ibus 기반 — PySide6 번들 Qt6와 ABI 호환):
#   sudo apt install dbus-x11 ibus ibus-hangul
#
# Qt6 / PySide6 런타임:
#   sudo apt install libxkbcommon-x11-0 libxcb-cursor0 libxcb-icccm4 libxcb-image0
#                    libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-shape0
#                    libxcb-xinerama0 libxcb-xkb1 libegl1 libegl-mesa0 libgl1
#                    libglib2.0-0  # Ubuntu 24.04에서는 libglib2.0-0t64 로 대체됨 — 무시 가능
#
# ⚠️  fcitx 잔재 제거 필수: ~/.bashrc 에 QT_IM_MODULE=fcitx / GTK_IM_MODULE=fcitx 가 있으면
#     ibus 연결 실패. main.py가 강제 override하지만 근본 원인은 .bashrc 정리 권장:
#     grep -n "fcitx\|IM_MODULE" ~/.bashrc ~/.profile 2>/dev/null
#
# 실행: uv run python main.py  (dbus/ibus 기동 및 Ctrl+Space 토글 키 등록은 main.py가 자동 처리)
# ⚠️  Ubuntu 24.04 + systemd: eval $(dbus-launch --sh-syntax) 사용 금지 — ibus 연결 파괴됨

[project]
name = "achat"
version = "0.1.0"
description = "플로팅 PIP 캐릭터 챗봇 + 기능 도우미 — 개발 환경 (Linux + GPU)"
requires-python = ">=3.10"
dependencies = [
    # ── LLM / 파인튜닝 ──────────────────────────────────────
    "transformers>=4.45.0",
    "peft>=0.11.0",
    "bitsandbytes>=0.44.0",      # Blackwell RTX 50xx (SM 10.x) 지원 최소 버전
    "accelerate>=0.30.0",
    "datasets>=2.18.0",
    "huggingface_hub>=0.23.0",
    # PyTorch CUDA 빌드는 아래 [tool.uv.sources] 인덱스를 통해 설치됨
    "torch",
    "torchvision",
    "torchaudio",
    # ── 임베딩 / VDB ────────────────────────────────────────
    "sentence-transformers>=3.0.0",   # bge-m3 로컬 임베딩
    "chromadb>=0.5.0",                # 장기 메모리 + RAG VDB
    # ── 데이터 처리 ─────────────────────────────────────────
    "PyYAML>=6.0",
    "numpy",
    # ── UI ──────────────────────────────────────────────────
    "pyside6<6.10",
    # ── 유틸리티 ────────────────────────────────────────────
    "loguru>=0.7.0",
    "tqdm",
    "rich",
    "matplotlib>=3.8.0",
]

# PyTorch CUDA 12.8 빌드 인덱스 (RTX 5060 Ti / Blackwell 대응)
[tool.uv.sources]
torch     = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio  = { index = "pytorch-cu128" }

[[tool.uv.index]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]   # pycodestyle + pyflakes
ignore = [
    "E501",   # 줄 길이 (주석/로그 문자열 제외)
    "F401",   # 미사용 import (모듈 __init__.py에서 허용)
    "E402",   # sys.path.insert 이후 로컬 모듈 import — 프로젝트 루트 설정 패턴
]
exclude = ["training/data/**", "data/**", "**/*.qml"]
